# EECS-348-Term-Project

./: .gitignore  ErrorHandler.cpp  ErrorHandler.h  Evaluator.cpp  Node.cpp  Node.h  Parser.cpp  Parser.h  ReadMe.md  Token.cpp  Tokenizer.cpp  Tokenizer.h  main.cpp
Project_Meeting_Notes/: 2_3_26 Meeting Notes.docx
docs/Project_Meeting_Notes/: 3_5_26_Meeting_Notes.docx  4_2_26_Meeting_Notes.docx
docs/Project_Meeting_Notes/Meeting Notes/: 2_16_26 Meeting Notes.docx
parser code/: ErrorHandler.cpp  ErrorHandler.h  Evaluator.cpp  Evaluator.h  Headers.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Tokenizer.h  main.cpp
src/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Evaluator.cpp  Evaluator.h  Parser.cpp  Tokenizer.cpp  main.cpp
